// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard filters elements 1`] = `
<DocumentFragment>
  <div
    class="sc-hHLeRK kUHngK"
  >
    <div
      class="sc-eCYdqJ bcsQqv"
    >
      <div
        class="sc-jSMfEi gZdlnv"
      >
        <div
          class="sc-gKXOVf gtvVWl"
        >
          <div
            class="sc-bczRLJ jOvewB"
          >
            <label
              class="sc-gsnTZi fDnEkf"
            >
              Filter files
            </label>
            <svg
              aria-hidden="true"
              class="sc-dkzDqf dMgMsg"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="22 3 2 3 10 12.46 10 19 14 21 14 12.46 22 3"
              />
            </svg>
            <input
              class="sc-hKMtZM lchXNC"
              data-testid="filter"
              placeholder="Filter"
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-dmRaPn efQSLD"
    >
      <table
        aria-labelledby="caption"
        class="sc-papXJ epcGNj"
      >
        <caption
          class="sc-jqUVSM gdSIHW"
          id="caption"
        >
          Files
        </caption>
        <thead
          class="sc-kDDrLX jNTfpP"
        >
          <tr
            class="sc-iqcoie cZXVYK"
          >
            <th
              aria-sort="descending"
              class="sc-evZas bwRhGG"
              id="ColName"
            >
              <button
                aria-label="Sort by name"
                class="sc-breuTD cKkTNF"
                data-testid="ColNameSortButton"
                id="ColNameSortButton"
                type="button"
              >
                <span>
                  Name
                </span>
                <svg
                  aria-hidden="true"
                  class="sc-dIouRR oRiyF"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 1024 1024"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M862 465.3h-81c-4.6 0-9 2-12.1 5.5L550 723.1V160c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v563.1L255.1 470.8c-3-3.5-7.4-5.5-12.1-5.5h-81c-6.8 0-10.5 8.1-6 13.2L487.9 861a31.96 31.96 0 0 0 48.3 0L868 478.5c4.5-5.2.8-13.2-6-13.2z"
                  />
                </svg>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sc-evZas bwRhGG"
              id="ColType"
            >
              <button
                aria-label="Sort by type"
                class="sc-breuTD cKkTNF"
                data-testid="ColTypeSortButton"
                id="ColTypeSortButton"
                type="button"
              >
                <span>
                  Type
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sc-evZas bwRhGG"
              id="ColDate"
            >
              <button
                aria-label="Sort by date"
                class="sc-breuTD cKkTNF"
                data-testid="ColDateSortButton"
                id="ColDateSortButton"
                type="button"
              >
                <span>
                  Date
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sc-evZas bwRhGG"
              id="ColSize"
            >
              <button
                aria-label="Sort by size"
                class="sc-breuTD cKkTNF"
                data-testid="ColSizeSortButton"
                id="ColSizeSortButton"
                type="button"
              >
                <span>
                  Size
                </span>
              </button>
            </th>
          </tr>
        </thead>
        <tbody
          class="sc-ksZaOG cCLelE"
          data-testid="tablebody"
        >
          <tr
            class="sc-crXcEl epFFdU"
            data-testid="Statements-0"
          >
            <td
              class="sc-hAZoDl beNxwC"
              data-testid="cell-Statements-0"
            >
              <svg
                aria-hidden="true"
                class="sc-fEOsli hbVjCl"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M854.6 288.7c6 6 9.4 14.1 9.4 22.6V928c0 17.7-14.3 32-32 32H192c-17.7 0-32-14.3-32-32V96c0-17.7 14.3-32 32-32h424.7c8.5 0 16.7 3.4 22.7 9.4l215.2 215.3zM790.2 326L602 137.8V326h188.2z"
                />
              </svg>
              <span>
                Statements
              </span>
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              pdf
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              2017-02-15
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              Missing size
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dashboard renders correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-hHLeRK kUHngK"
  >
    <div
      class="sc-eCYdqJ bcsQqv"
    >
      <div
        class="sc-jSMfEi gZdlnv"
      >
        <div
          class="sc-gKXOVf gtvVWl"
        >
          <div
            class="sc-bczRLJ jOvewB"
          >
            <label
              class="sc-gsnTZi fDnEkf"
            >
              Filter files
            </label>
            <svg
              aria-hidden="true"
              class="sc-dkzDqf dMgMsg"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="22 3 2 3 10 12.46 10 19 14 21 14 12.46 22 3"
              />
            </svg>
            <input
              class="sc-hKMtZM lchXNC"
              data-testid="filter"
              placeholder="Filter"
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-dmRaPn efQSLD"
    >
      <table
        aria-labelledby="caption"
        class="sc-papXJ epcGNj"
      >
        <caption
          class="sc-jqUVSM gdSIHW"
          id="caption"
        >
          Files
        </caption>
        <thead
          class="sc-kDDrLX jNTfpP"
        >
          <tr
            class="sc-iqcoie cZXVYK"
          >
            <th
              aria-sort="ascending"
              class="sc-evZas bwRhGG"
              id="ColName"
            >
              <button
                aria-label="Sort by name"
                class="sc-breuTD cKkTNF"
                data-testid="ColNameSortButton"
                id="ColNameSortButton"
                type="button"
              >
                <span>
                  Name
                </span>
                <svg
                  aria-hidden="true"
                  class="sc-idiyUo eWncqp"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 1024 1024"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M868 545.5L536.1 163a31.96 31.96 0 0 0-48.3 0L156 545.5a7.97 7.97 0 0 0 6 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
                  />
                </svg>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sc-evZas bwRhGG"
              id="ColType"
            >
              <button
                aria-label="Sort by type"
                class="sc-breuTD cKkTNF"
                data-testid="ColTypeSortButton"
                id="ColTypeSortButton"
                type="button"
              >
                <span>
                  Type
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sc-evZas bwRhGG"
              id="ColDate"
            >
              <button
                aria-label="Sort by date"
                class="sc-breuTD cKkTNF"
                data-testid="ColDateSortButton"
                id="ColDateSortButton"
                type="button"
              >
                <span>
                  Date
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sc-evZas bwRhGG"
              id="ColSize"
            >
              <button
                aria-label="Sort by size"
                class="sc-breuTD cKkTNF"
                data-testid="ColSizeSortButton"
                id="ColSizeSortButton"
                type="button"
              >
                <span>
                  Size
                </span>
              </button>
            </th>
          </tr>
        </thead>
        <tbody
          class="sc-ksZaOG cCLelE"
          data-testid="tablebody"
        >
          <tr
            class="sc-crXcEl epFFdU"
            data-testid="Amplified-0"
          >
            <td
              class="sc-hAZoDl beNxwC"
              data-testid="cell-Amplified-0"
            >
              <svg
                aria-hidden="true"
                class="sc-fEOsli hbVjCl"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M854.6 288.7c6 6 9.4 14.1 9.4 22.6V928c0 17.7-14.3 32-32 32H192c-17.7 0-32-14.3-32-32V96c0-17.7 14.3-32 32-32h424.7c8.5 0 16.7 3.4 22.7 9.4l215.2 215.3zM790.2 326L602 137.8V326h188.2z"
                />
              </svg>
              <span>
                Amplified
              </span>
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              pdf
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              2022-02-07
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              Missing size
            </td>
          </tr>
          <tr
            class="sc-crXcEl fNBoa-D"
            data-testid="Cost centres-1"
          >
            <td
              class="sc-hAZoDl beNxwC"
              data-testid="cell-Cost centres-1"
            >
              <svg
                aria-hidden="true"
                class="sc-fEOsli hbVjCl"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M854.6 288.7c6 6 9.4 14.1 9.4 22.6V928c0 17.7-14.3 32-32 32H192c-17.7 0-32-14.3-32-32V96c0-17.7 14.3-32 32-32h424.7c8.5 0 16.7 3.4 22.7 9.4l215.2 215.3zM790.2 326L602 137.8V326h188.2z"
                />
              </svg>
              <span>
                Cost centres
              </span>
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              csv
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              2016-08-12
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              Missing size
            </td>
          </tr>
          <tr
            class="sc-crXcEl epFFdU"
            data-testid="Employee Handbook-2"
          >
            <td
              class="sc-hAZoDl beNxwC"
              data-testid="cell-Employee Handbook-2"
            >
              <svg
                aria-hidden="true"
                class="sc-fEOsli hbVjCl"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M854.6 288.7c6 6 9.4 14.1 9.4 22.6V928c0 17.7-14.3 32-32 32H192c-17.7 0-32-14.3-32-32V96c0-17.7 14.3-32 32-32h424.7c8.5 0 16.7 3.4 22.7 9.4l215.2 215.3zM790.2 326L602 137.8V326h188.2z"
                />
              </svg>
              <span>
                Employee Handbook
              </span>
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              pdf
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              2017-01-06
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              Missing size
            </td>
          </tr>
          <tr
            class="sc-crXcEl fNBoa-D"
            data-testid="Executive Handbook-3"
          >
            <td
              class="sc-hAZoDl beNxwC"
              data-testid="cell-Executive Handbook-3"
            >
              <svg
                aria-hidden="true"
                class="sc-fEOsli hbVjCl"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M854.6 288.7c6 6 9.4 14.1 9.4 22.6V928c0 17.7-14.3 32-32 32H192c-17.7 0-32-14.3-32-32V96c0-17.7 14.3-32 32-32h424.7c8.5 0 16.7 3.4 22.7 9.4l215.2 215.3zM790.2 326L602 137.8V326h188.2z"
                />
              </svg>
              <span>
                Executive Handbook
              </span>
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              pdf
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              2012-04-03
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              Missing size
            </td>
          </tr>
          <tr
            class="sc-crXcEl epFFdU"
            data-testid="Expenses-4"
          >
            <td
              class="sc-hAZoDl beNxwC"
              data-testid="cell-Expenses-4"
            >
              <button
                class="sc-fnykZs hLUeUM"
                data-testid="folder-button-4"
              >
                <svg
                  aria-hidden="true"
                  class="sc-bjUoiL fkwybY"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 1024 1024"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M880 298.4H521L403.7 186.2a8.15 8.15 0 0 0-5.5-2.2H144c-17.7 0-32 14.3-32 32v592c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V330.4c0-17.7-14.3-32-32-32z"
                  />
                </svg>
                <span>
                  Expenses
                </span>
              </button>
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              folder
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              Missing Date
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              2
            </td>
          </tr>
          <tr
            class="sc-crXcEl fNBoa-D"
            data-testid="Human Resources Handbook-5"
          >
            <td
              class="sc-hAZoDl beNxwC"
              data-testid="cell-Human Resources Handbook-5"
            >
              <svg
                aria-hidden="true"
                class="sc-fEOsli hbVjCl"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M854.6 288.7c6 6 9.4 14.1 9.4 22.6V928c0 17.7-14.3 32-32 32H192c-17.7 0-32-14.3-32-32V96c0-17.7 14.3-32 32-32h424.7c8.5 0 16.7 3.4 22.7 9.4l215.2 215.3zM790.2 326L602 137.8V326h188.2z"
                />
              </svg>
              <span>
                Human Resources Handbook
              </span>
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              pdf
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              2014-02-06
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              Missing size
            </td>
          </tr>
          <tr
            class="sc-crXcEl epFFdU"
            data-testid="Marketing Handbook-6"
          >
            <td
              class="sc-hAZoDl beNxwC"
              data-testid="cell-Marketing Handbook-6"
            >
              <svg
                aria-hidden="true"
                class="sc-fEOsli hbVjCl"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M854.6 288.7c6 6 9.4 14.1 9.4 22.6V928c0 17.7-14.3 32-32 32H192c-17.7 0-32-14.3-32-32V96c0-17.7 14.3-32 32-32h424.7c8.5 0 16.7 3.4 22.7 9.4l215.2 215.3zM790.2 326L602 137.8V326h188.2z"
                />
              </svg>
              <span>
                Marketing Handbook
              </span>
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              pdf
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              2015-02-06
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              Missing size
            </td>
          </tr>
          <tr
            class="sc-crXcEl fNBoa-D"
            data-testid="Misc-7"
          >
            <td
              class="sc-hAZoDl beNxwC"
              data-testid="cell-Misc-7"
            >
              <button
                class="sc-fnykZs hLUeUM"
                data-testid="folder-button-7"
              >
                <svg
                  aria-hidden="true"
                  class="sc-bjUoiL fkwybY"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 1024 1024"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M880 298.4H521L403.7 186.2a8.15 8.15 0 0 0-5.5-2.2H144c-17.7 0-32 14.3-32 32v592c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V330.4c0-17.7-14.3-32-32-32z"
                  />
                </svg>
                <span>
                  Misc
                </span>
              </button>
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              folder
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              Missing Date
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              3
            </td>
          </tr>
          <tr
            class="sc-crXcEl epFFdU"
            data-testid="Networks Handbook-8"
          >
            <td
              class="sc-hAZoDl beNxwC"
              data-testid="cell-Networks Handbook-8"
            >
              <svg
                aria-hidden="true"
                class="sc-fEOsli hbVjCl"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M854.6 288.7c6 6 9.4 14.1 9.4 22.6V928c0 17.7-14.3 32-32 32H192c-17.7 0-32-14.3-32-32V96c0-17.7 14.3-32 32-32h424.7c8.5 0 16.7 3.4 22.7 9.4l215.2 215.3zM790.2 326L602 137.8V326h188.2z"
                />
              </svg>
              <span>
                Networks Handbook
              </span>
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              pdf
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              2013-02-14
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              Missing size
            </td>
          </tr>
          <tr
            class="sc-crXcEl fNBoa-D"
            data-testid="Public Holiday policy-9"
          >
            <td
              class="sc-hAZoDl beNxwC"
              data-testid="cell-Public Holiday policy-9"
            >
              <svg
                aria-hidden="true"
                class="sc-fEOsli hbVjCl"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M854.6 288.7c6 6 9.4 14.1 9.4 22.6V928c0 17.7-14.3 32-32 32H192c-17.7 0-32-14.3-32-32V96c0-17.7 14.3-32 32-32h424.7c8.5 0 16.7 3.4 22.7 9.4l215.2 215.3zM790.2 326L602 137.8V326h188.2z"
                />
              </svg>
              <span>
                Public Holiday policy
              </span>
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              pdf
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              2016-12-06
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              Missing size
            </td>
          </tr>
          <tr
            class="sc-crXcEl epFFdU"
            data-testid="Public Holiday policy 2-10"
          >
            <td
              class="sc-hAZoDl beNxwC"
              data-testid="cell-Public Holiday policy 2-10"
            >
              <svg
                aria-hidden="true"
                class="sc-fEOsli hbVjCl"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M854.6 288.7c6 6 9.4 14.1 9.4 22.6V928c0 17.7-14.3 32-32 32H192c-17.7 0-32-14.3-32-32V96c0-17.7 14.3-32 32-32h424.7c8.5 0 16.7 3.4 22.7 9.4l215.2 215.3zM790.2 326L602 137.8V326h188.2z"
                />
              </svg>
              <span>
                Public Holiday policy 2
              </span>
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              pdf
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              2016-12-07
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              Missing size
            </td>
          </tr>
          <tr
            class="sc-crXcEl fNBoa-D"
            data-testid="Public Holiday policy 3-11"
          >
            <td
              class="sc-hAZoDl beNxwC"
              data-testid="cell-Public Holiday policy 3-11"
            >
              <svg
                aria-hidden="true"
                class="sc-fEOsli hbVjCl"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M854.6 288.7c6 6 9.4 14.1 9.4 22.6V928c0 17.7-14.3 32-32 32H192c-17.7 0-32-14.3-32-32V96c0-17.7 14.3-32 32-32h424.7c8.5 0 16.7 3.4 22.7 9.4l215.2 215.3zM790.2 326L602 137.8V326h188.2z"
                />
              </svg>
              <span>
                Public Holiday policy 3
              </span>
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              pdf
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              2016-12-08
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              Missing size
            </td>
          </tr>
          <tr
            class="sc-crXcEl epFFdU"
            data-testid="Public Holiday policy final-12"
          >
            <td
              class="sc-hAZoDl beNxwC"
              data-testid="cell-Public Holiday policy final-12"
            >
              <svg
                aria-hidden="true"
                class="sc-fEOsli hbVjCl"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M854.6 288.7c6 6 9.4 14.1 9.4 22.6V928c0 17.7-14.3 32-32 32H192c-17.7 0-32-14.3-32-32V96c0-17.7 14.3-32 32-32h424.7c8.5 0 16.7 3.4 22.7 9.4l215.2 215.3zM790.2 326L602 137.8V326h188.2z"
                />
              </svg>
              <span>
                Public Holiday policy final
              </span>
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              pdf
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              2016-12-09
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              Missing size
            </td>
          </tr>
          <tr
            class="sc-crXcEl fNBoa-D"
            data-testid="Setup Guide-13"
          >
            <td
              class="sc-hAZoDl beNxwC"
              data-testid="cell-Setup Guide-13"
            >
              <svg
                aria-hidden="true"
                class="sc-fEOsli hbVjCl"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M854.6 288.7c6 6 9.4 14.1 9.4 22.6V928c0 17.7-14.3 32-32 32H192c-17.7 0-32-14.3-32-32V96c0-17.7 14.3-32 32-32h424.7c8.5 0 16.7 3.4 22.7 9.4l215.2 215.3zM790.2 326L602 137.8V326h188.2z"
                />
              </svg>
              <span>
                Setup Guide
              </span>
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              pdf
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              2017-07-02
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              Missing size
            </td>
          </tr>
          <tr
            class="sc-crXcEl epFFdU"
            data-testid="Statements-14"
          >
            <td
              class="sc-hAZoDl beNxwC"
              data-testid="cell-Statements-14"
            >
              <svg
                aria-hidden="true"
                class="sc-fEOsli hbVjCl"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M854.6 288.7c6 6 9.4 14.1 9.4 22.6V928c0 17.7-14.3 32-32 32H192c-17.7 0-32-14.3-32-32V96c0-17.7 14.3-32 32-32h424.7c8.5 0 16.7 3.4 22.7 9.4l215.2 215.3zM790.2 326L602 137.8V326h188.2z"
                />
              </svg>
              <span>
                Statements
              </span>
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              pdf
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              2017-02-15
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              Missing size
            </td>
          </tr>
          <tr
            class="sc-crXcEl fNBoa-D"
            data-testid="Zen-15"
          >
            <td
              class="sc-hAZoDl beNxwC"
              data-testid="cell-Zen-15"
            >
              <svg
                aria-hidden="true"
                class="sc-fEOsli hbVjCl"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M854.6 288.7c6 6 9.4 14.1 9.4 22.6V928c0 17.7-14.3 32-32 32H192c-17.7 0-32-14.3-32-32V96c0-17.7 14.3-32 32-32h424.7c8.5 0 16.7 3.4 22.7 9.4l215.2 215.3zM790.2 326L602 137.8V326h188.2z"
                />
              </svg>
              <span>
                Zen
              </span>
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              zsv
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              2011-05-16
            </td>
            <td
              class="sc-hAZoDl beNxwC"
            >
              Missing size
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
